--- a/resources/sass/components/_toTopButton.scss
+++ b/resources/sass/components/_toTopButton.scss
@@ -13,4 +13,8 @@
     cursor: pointer;
     z-index: 9000;
     filter: blur(0.7px);
+
+    @media (max-width: $changeLayoutWidth) {
+        filter: blur(0.35px);
+    }
 }
